force-app/main/default/objects/MUSW__Master_Work_Item_List__c/MUSW__Master_Work_Item_List__c.object-meta.xml
<CustomObject>
    <label>Work Item Template</label>
    <nameField>
        <label>Work Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>