force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Category__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Category__c</fullName>
    <description>Type of Work Item</description>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>