force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Quantity__c</fullName>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>