force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <description>User friendly name of Work Item</description>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>