force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Help_Text__c</fullName>
    <description>Help text for this specific work item</description>
    <label>Help Text</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>