force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>MUSW__IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>