force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit_Type__c</fullName>
    <description>Permit Record Type</description>
    <label>Permit Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>