force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Price_Formula__c</fullName>
    <label>Price Formula</label>
    <length>3900</length>
    <type>LongTextArea</type>
</CustomField>