force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Product__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A product related to the master work item to carry product information include standard price.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Item Templates</relationshipLabel>
    <relationshipName>Master_Work_Item_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>