force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_Type__c</fullName>
    <description>Name of Work Item Record Type</description>
    <label>Work Item Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>