force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sub_Category__c</fullName>
    <description>Work Item field grouping</description>
    <label>Sub Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>