force-app/main/default/objects/MUSW__Master_Work_Item_List__c/fields/MUSW__Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Units_of_Measure</valueSetName>
    </valueSet>
</CustomField>