force-app/main/default/objects/MUSW__Master_Work_Item_List__c/recordTypes/MUSW__Permit_Work_Item.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Work_Item</fullName>
    <active>true</active>
    <label>Permit Work Item</label>
</RecordType>