force-app/main/default/objects/MUSW__Master_Work_Item_List__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Description__c</columns>
    <columns>MUSW__Record_Type__c</columns>
    <columns>MUSW__Object_Types__c</columns>
    <columns>MUSW__Object_Record_Types__c</columns>
    <columns>MUSW__IsEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>